resolve overflow in columns

--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,7 @@ h4 {
 }
 
 p {
-    font-size: 20px;
+    font-size: 18px;
     color: #E8EDE7;
     vertical-align: middle;
 }
@@ -112,10 +112,6 @@ td {
 
 /* PROJECTS */
 
-.btn-secondary {
-    margin: 2vh;
-}
-
 #currbtn {
     background: rgba(81, 187, 89, 0.4);
 }
@@ -130,12 +126,13 @@ td {
 .about-projects {
     color: white;
     background-color: #5d5d5d;
+    border: 0;
     padding: 3vh;
     justify-content: center;
 }
 
 .post h2 {
-    min-height: 75px;
+    min-height: 70px;
 }
 
 .post {
@@ -143,13 +140,47 @@ td {
     text-align: left;
     padding: 3vh;
     padding-bottom: 5vh;
-    margin: 3vh;
 }
+
+@media (max-width: 575px) {
+    .btn-secondary {
+        font-size: 12px;
+    }
+    
+}
+
+@media (min-width: 576px) {
+    .post {
+        min-width: 47vw;
+        max-width: 47vw;
+    }
+    .card-columns {
+        column-count: 2;
+    }
+}
+
 @media (min-width: 768px) { 
     .post{
         max-width: 33vw;
     }
 }
+
+@media (min-width: 992px) {
+    .post {
+        min-width: 30vw;
+        max-width: 30vw;
+    }
+    .card-columns {
+        column-count: 3;
+    }
+}
+
+@media (min-width: 1200px) {
+    .card-columns {
+        column-count: 3;
+    }
+}
+
 .computer{
     background: rgba(30, 177, 214, 0.4);
 }
